deployment/dist/prod/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: Service
    app.kubernetes.io/instance: banking-ui-feat-ci
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: banking-ui
    app.kubernetes.io/part-of: banking
    app.kubernetes.io/version: banking-ui-2.3.0
  name: banking-ui
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: banking-ui
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: Frontend
    app.kubernetes.io/instance: banking-ui-feat-ci
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: banking-ui
    app.kubernetes.io/part-of: banking
    app.kubernetes.io/version: banking-ui-2.3.0
  name: banking-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-ui
  template:
    metadata:
      labels:
        app: banking-ui
        app.kubernetes.io/component: ReplicaSet
        app.kubernetes.io/instance: banking-ui-feat-ci
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: banking-ui
        app.kubernetes.io/part-of: banking-ui
        app.kubernetes.io/version: banking-ui-2.3.0
    spec:
      containers:
      - env:
        - name: GRAPHQL_API
          value: http://example.com/graphql
        image: danielr1996/banking-ui
        imagePullPolicy: Always
        name: banking-ui
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: Ingress
    app.kubernetes.io/instance: banking-ui-feat-ci
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: banking-ui
    app.kubernetes.io/part-of: banking
    app.kubernetes.io/version: banking-ui-2.3.0
  name: banking-ui
spec:
  rules:
  - host: banking.danielr1996.de
    http:
      paths:
      - backend:
          serviceName: banking-ui
          servicePort: 80
